# reasondb

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh
.github/workflows/: bump-version.yml  release-desktop.yml  release.yml
apps/reasondb-client/: package-lock.json  package.json
apps/reasondb-client/src/: App.tsx  index.css
apps/reasondb-client/src-tauri/: Cargo.toml  tauri.conf.json
apps/reasondb-client/src-tauri/capabilities/: default.json
apps/reasondb-client/src-tauri/icons/: icon.icns
apps/reasondb-client/src-tauri/src/: lib.rs  main.rs
apps/reasondb-client/src/hooks/: useToast.ts
apps/reasondb-client/src/lib/: api.ts  keychain.ts  monaco-theme.ts  rql-language.ts  sql-completion.test.ts  sql-completion.ts
apps/reasondb-client/src/stores/: connectionStore.test.ts  connectionStore.ts  ingestionStore.ts  queryStore.ts  tableStore.ts  tabsStore.ts  uiStore.test.ts
crates/reasondb-cli/: Cargo.toml
crates/reasondb-cli/src/: config.rs  main.rs
crates/reasondb-cli/src/commands/: auth.rs  backup.rs  cluster.rs  config.rs  docs.rs  export.rs  health.rs  import.rs  mod.rs  query.rs  search.rs  tables.rs
crates/reasondb-core/: Cargo.toml
crates/reasondb-core/src/: cache.rs  engine.rs  error.rs  lib.rs  query_filter.rs  shard.rs  text_index.rs  tree_grep.rs
crates/reasondb-core/src/auth/: key.rs  store.rs
crates/reasondb-core/src/backup/: export.rs  manager.rs  mod.rs  snapshot.rs
crates/reasondb-core/src/cluster/: config.rs  log.rs  network.rs  node.rs  raft.rs  state.rs
crates/reasondb-core/src/llm/: config.rs  dynamic.rs  mock.rs  mod.rs  provider.rs
crates/reasondb-core/src/model/: document.rs  filter.rs  mod.rs  node.rs  relation.rs  tests.rs
crates/reasondb-core/src/ratelimit/: limiter.rs  mod.rs  store.rs
crates/reasondb-core/src/rql/: ast.rs  executor.rs  lexer.rs  mod.rs  parser.rs  tests.rs
crates/reasondb-core/src/rql/executor/: aggregate.rs  filter.rs  mod.rs  plan.rs  reason.rs  types.rs
crates/reasondb-core/src/store/: config.rs  documents.rs  jobs.rs  migration.rs  mod.rs  nodes.rs  queries.rs  rate_limits.rs  relations.rs  tables.rs  tests.rs
crates/reasondb-ingest/: Cargo.toml
crates/reasondb-ingest/src/: chunker.rs  error.rs  extractor.rs  lib.rs  pipeline.rs  summarizer.rs  tree_builder.rs
crates/reasondb-plugin/: Cargo.toml
crates/reasondb-plugin/src/: error.rs  lib.rs  manager.rs  manifest.rs  protocol.rs  registry.rs  runner.rs
crates/reasondb-plugin/tests/: integration.rs
crates/reasondb-server/: Cargo.toml
crates/reasondb-server/src/: auth.rs  error.rs  jobs.rs  lib.rs  main.rs  metrics.rs  ratelimit.rs  replication.rs  state.rs
crates/reasondb-server/src/routes/: auth.rs  backup.rs  cluster.rs  config.rs  documents.rs  ingest.rs  mod.rs  plugins.rs  query.rs  relations.rs  search.rs  tables.rs
deploy/aws/pulumi/: index.ts
deploy/aws/terraform/: variables.tf
deploy/gcp/pulumi/: index.ts
deploy/gcp/terraform/: variables.tf
docs/: .devdoc.json  CLAUDE.md  README.md  animation-script-30s.md  animation-script.md  concepts.mdx  custom.css  docs.json  index.mdx  package-lock.json  package.json  quickstart.mdx  theme.json
docs/.claude/skills/blame-doc/: SKILL.md
docs/.claude/skills/bootstrap-docs/: SKILL.md
docs/.claude/skills/check-docs/: SKILL.md
docs/.claude/skills/commit-doc/: SKILL.md
docs/.claude/skills/create-doc/: SKILL.md
docs/.claude/skills/delete-doc/: SKILL.md
docs/.claude/skills/import-api-spec/: SKILL.md
docs/.cursor/rules/: devdoc-blame.mdc  devdoc-bootstrap.mdc  devdoc-commit.mdc  devdoc-create.mdc  devdoc-delete.mdc  devdoc-migrate.mdc  devdoc-update.mdc  devdoc-whisk-theme.mdc  devdoc.mdc
docs/.devdoc/: context.json
docs/.devdoc/schemas/: docs.schema.json  theme.schema.json
docs/.devdoc/templates/: api-reference.md  guide.md  quickstart.md  troubleshooting.md  tutorial.md
docs/advanced/: architecture.mdx
docs/api-reference/: errors.mdx  introduction.mdx  openapi.json
docs/guides/: authentication.mdx  backup.mdx  clustering.mdx  configuration.mdx  ingestion.mdx  monitoring.mdx  plugins.mdx  rate-limiting.mdx  relationships.mdx  rql.mdx  search.mdx  tables.mdx
docs/tutorials/: document-relationships.mdx  index.mdx  knowledge-base.mdx  legal-search.mdx  research-papers.mdx  rql-basics.mdx
homebrew/: reasondb.rb
plugins/markitdown/: plugin.toml  wrapper.py
scripts/: update-homebrew.sh
tutorials/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
tutorials/01-rql-basics/: package-lock.json  package.json  tsconfig.tsbuildinfo
tutorials/02-legal-search/: next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
tutorials/03-research-papers/: package-lock.json  package.json  tsconfig.tsbuildinfo
tutorials/04-knowledge-base/: package-lock.json  package.json  tsconfig.tsbuildinfo
tutorials/05-pdf-financials/: package-lock.json  package.json  tsconfig.tsbuildinfo
tutorials/data/books/: manifest.json  moby-dick.txt  sherlock-holmes.txt
tutorials/data/financials/: apple-2023-10k.meta.json  apple-2023-10k.txt  manifest.json  microsoft-2023-10k.meta.json  microsoft-2023-10k.txt  tesla-2023-10k.meta.json  tesla-2023-10k.txt
tutorials/data/opinions/: ai-executive-order.meta.json  ai-executive-order.txt  algorithmic-accountability.meta.json  algorithmic-accountability.txt  autonomous-vehicles.meta.json  autonomous-vehicles.txt  generative-ai-copyright.meta.json  generative-ai-copyright.txt  manifest.json  ml-bias-regulation.meta.json  ml-bias-regulation.txt
tutorials/data/papers/: attention-is-all-you-need.meta.json  bert.meta.json  gpt-3.meta.json  manifest.json
tutorials/data/wiki/: llm.meta.json  llm.txt  machine-learning.meta.json  machine-learning.txt  manifest.json  neural-network.meta.json  neural-network.txt  nlp.meta.json  nlp.txt  transformer.meta.json  transformer.txt
tutorials/scripts/: fetch-all.ts  fetch-retry.ts
tutorials/scripts/fetchers/: arxiv.ts  courtlistener.ts  gutenberg.ts  sec-edgar.ts  wikipedia.ts
(+72 files in other folders)
