[workspace]
resolver = "2"
members = [
    "crates/reasondb-core",
    "crates/reasondb-ingest",
    "crates/reasondb-plugin",
    "crates/reasondb-server",
    "crates/reasondb-cli",
    "apps/reasondb-client/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ReasonDB Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/reasondb/reasondb"
description = "A reasoning-native database for AI agents"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Storage
redb = "2.1"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1.10"

# Full-text search (BM25)
tantivy = "0.22"

# HTTP client (for LLM APIs)
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"

# LLM Framework (multi-provider support)
rig-core = "0.6"
schemars = "0.8"

# Testing
tempfile = "3.9"

# Clustering
byteorder = "1.5"
