[workspace]
resolver = "2"
members = [
    "crates/reasondb-core",
    "crates/reasondb-ingest",
    "crates/reasondb-plugin",
    "crates/reasondb-server",
    "crates/reasondb-cli",
    "apps/reasondb-client/src-tauri",
]
default-members = [
    "crates/reasondb-core",
    "crates/reasondb-ingest",
    "crates/reasondb-plugin",
    "crates/reasondb-server",
    "crates/reasondb-cli",
]

[workspace.package]
version = "0.5.4"
edition = "2021"
authors = ["ReasonDB Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/reasondb/reasondb"
description = "A reasoning-native database for AI agents"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
rmp-serde = "1"

# Storage
redb = "2.1"

# Async runtime
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync", "signal"] }
async-trait = "0.1"
futures = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1.10"

# Full-text search (BM25)
tantivy = "0.22"

# HTTP client (for LLM APIs)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
url = "2.5"

# LLM Framework (multi-provider support)
rig-core = "0.6"
schemars = "0.8"

# AWS Bedrock (optional; enable with reasondb-core "bedrock" feature)
aws-config = "1.4"
aws-sdk-bedrockruntime = "1.36"

# Testing
tempfile = "3.9"

# Clustering
byteorder = "1.5"

[profile.dev]
opt-level = 0
debug = 1

[profile.dev.package."*"]
opt-level = 1
