[package]
name = "reasondb-cli"
version = "0.2.0"
edition = "2021"
description = "Command-line interface for ReasonDB"
license = "MIT OR Apache-2.0"

[[bin]]
name = "reasondb"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.4", features = ["derive", "env", "color"] }
clap_complete = "4.4"

# Core libraries
reasondb-core = { path = "../reasondb-core" }
reasondb-server = { path = "../reasondb-server" }

# HTTP client for API calls
reqwest = { version = "0.11", default-features = false, features = ["json", "blocking", "rustls-tls"] }

# Async runtime
tokio.workspace = true

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Table formatting
tabled = "0.15"
comfy-table = "7.1"

# Colors and styling
colored = "2.1"
indicatif = "0.17"

# REPL
rustyline = "13.0"

# File handling
csv = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Directories
dirs = "5.0"

# Config file
toml = "0.8"

# Time
chrono.workspace = true

# Vendored OpenSSL for cross-compilation (transitive dep from rig-core/reqwest)
openssl = { version = "0.10", features = ["vendored"], optional = true }

[features]
default = []
vendored-openssl = ["openssl"]
