[package]
name = "reasondb-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library for ReasonDB - models, storage, and reasoning engine"

[features]
default = []
# Enable AWS Bedrock provider (requires Rust 1.91+)
bedrock = ["aws-config", "aws-sdk-bedrockruntime"]

[dependencies]
# Serialization
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
rmp-serde.workspace = true

# Storage
redb.workspace = true

# Full-text search (BM25)
tantivy.workspace = true

# Async
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
regex.workspace = true

# Authentication / cryptography
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

# HTTP client
reqwest.workspace = true

# LLM Framework
rig-core.workspace = true
schemars.workspace = true
aws-config = { workspace = true, optional = true }
aws-sdk-bedrockruntime = { workspace = true, optional = true }

# Concurrency (hot-swap reasoner)
arc-swap = "1"

# Clustering
byteorder.workspace = true

# Backup/compression
flate2 = "1.0"
md5 = "0.7"
csv = "1.3"
stop-words = "0.10.0"
rust-stemmers = "1.2.0"

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util", "macros"] }
