[package]
name = "reasondb-ingest"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Document ingestion pipeline for ReasonDB"

[dependencies]
reasondb-core = { path = "../reasondb-core" }
reasondb-plugin = { path = "../reasondb-plugin" }

# Async
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Utilities
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true

# Text processing
regex = "1.10"
unicode-segmentation = "1.10"
