[package]
name = "reasondb-plugin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Plugin system for ReasonDB - process-based plugin architecture"

[dependencies]
# Serialization
serde.workspace = true
serde_json.workspace = true

# TOML manifest parsing
toml = "0.8"

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
glob = "0.3"

[dev-dependencies]
tempfile.workspace = true
