[package]
name = "reasondb"
version = "0.2.1"
description = "ReasonDB Desktop Client"
authors = ["you"]
license = ""
repository = "https://github.com/reasondb/reasondb"
edition = "2021"
rust-version = "1.91"

[lib]
name = "reasondb_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
